# Interpretations-of-Transformers

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  requirements.txt  setup.py
backend/: .gitignore  ARCHITECTURE.md  Dockerfile  EXPERIMENT_PROCESS.md  docker.env  list.txt  pyproject.toml
backend/artifacts/logs/: error.txt
backend/configs/: CONFIG.md  datasets.yaml  experiment.yaml
backend/experiments/: __init__.py  _bootstrap.py  analyze_robustness.py  build_splits.py  dump_datasets.py  experiment_config.json  generate_reports.py  inspect_datasets.py  interactive_tone_style.py  prepare_data.py  run_exp.py  run_pipeline.py
backend/src/: __init__.py  attention_layer_viz.py  config_resolve.py  data_loaders.py  data_pipeline.py  data_preprocessing.py  data_schema.py  data_splits.py  datasets_load.py  experiment_config.py  experiment_logging.py  experiment_runner.py  finetuning.py  layer_embedding_viz.py  leakage_protocol.py  linear_model.py  paths.py  probing.py  reports.py  robustness.py  run_context.py  split_diagnostics.py  tone_style_inference.py  utils.py
backend/src/baselines/: __init__.py  compare.py  leakage_baselines.py
backend/src/concept_directions/: __init__.py  builders.py  stats.py
backend/src/embeddings/: aggregation.py  extraction.py  extractor.py  normalization.py  pipeline.py  pooling.py  storage.py
backend/src/features/: __init__.py  surface.py
backend/src/language_models/: __init__.py  backbone.py  loader.py
backend/src/probing/: __init__.py  layer_probe.py  metrics.py  (+1 more)
backend/ui/: interactive_tone_style.py
(+9 files in other folders)
