[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "colorlog>=6.8.0",
    "datasets>=4.1.1",
    "hf-xet>=1.1.10",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
    "transformers[torch]>=4.56.2",
]
